// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager gas tests #mint above current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 180996,
}
`;

exports[`PoolManager gas tests #mint above current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 240537,
}
`;

exports[`PoolManager gas tests #mint above current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 180996,
}
`;

exports[`PoolManager gas tests #mint around current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 249478,
}
`;

exports[`PoolManager gas tests #mint around current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 358723,
}
`;

exports[`PoolManager gas tests #mint around current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 249478,
}
`;

exports[`PoolManager gas tests #mint below current price add to position existing 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 181673,
}
`;

exports[`PoolManager gas tests #mint below current price new position mint first in range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 305582,
}
`;

exports[`PoolManager gas tests #mint below current price second position in same range 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 181673,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 228521,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 222627,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 247469,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 289513,
}
`;

exports[`PoolManager gas tests #swapExact0For1 first swap in block, large swap, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 240507,
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block moves tick, no initialized crossings 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 228521,
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block with no tick movement 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 222716,
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block, large swap crossing a single initialized tick 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 241692,
}
`;

exports[`PoolManager gas tests #swapExact0For1 second swap in block, large swap crossing several initialized ticks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 283711,
}
`;
